--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -58,6 +58,8 @@
 @import 'components/staff-detail';
 @import 'components/staff-overview';
 @import 'components/tabs';
+@import 'components/tab-item';
+@import 'components/tab-nav';
 @import 'components/title-area';
 // @import 'components/video-modal';
 
