--- a/rca/static_src/sass/base/_base.scss
+++ b/rca/static_src/sass/base/_base.scss
@@ -1,5 +1,5 @@
 /*------------------------------------*\
-	$BASE DEFAULTS
+$BASE DEFAULTS
 \*------------------------------------*/
 
 // Box Sizing
@@ -16,6 +16,11 @@ html {
     -webkit-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    scroll-behavior: smooth;
+
+    @media (prefers-reduced-motion: reduce) {
+        scroll-behavior: auto;
+    }
 }
 
 body {
