--- a/rca/static_src/sass/components/_tab-item.scss
+++ b/rca/static_src/sass/components/_tab-item.scss
@@ -3,10 +3,24 @@
     $root: &;
     margin-right: ($gutter * 1.5);
 
+    &:last-child {
+        padding-right: ($gutter);
+
+        @include media-query(medium) {
+            padding-right: ($gutter * 3);
+        }
+
+        @include media-query(large) {
+            padding-right: 0;
+        }
+
+    }
+
     &__link {
         @include underline-hover();
         position: relative;
         color: $color--meta;
+        white-space: nowrap;
 
         &:hover {
             color: $color--white;
