--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
@@ -32,16 +32,16 @@
                 <div class="tabs__panel js-tab-panel" id="tab-panel-programme-overview" role="tabpanel" aria-labelledby="programme-overview">
                     {% include "patterns/organisms/programme_tabs/programme_overview.html" %}
                 </div>
-                <div class="tabs__panel js-tab-panel" id="tab-panel-curriculum" role="tabpanel" aria-labelledby="curriculum">
+                <div class="tabs__panel tabs__panel--hidden js-tab-panel" id="tab-panel-curriculum" role="tabpanel" aria-labelledby="curriculum">
                     {% include "patterns/organisms/programme_tabs/curriculum.html" %}
                 </div>
-                <div class="tabs__panel js-tab-panel" id="tab-panel-requirements" role="tabpanel" aria-labelledby="requirements">
+                <div class="tabs__panel tabs__panel--hidden js-tab-panel" id="tab-panel-requirements" role="tabpanel" aria-labelledby="requirements">
                     {% include "patterns/organisms/programme_tabs/requirements.html" %}
                 </div>
-                <div class="tabs__panel js-tab-panel" id="tab-panel-fees-and-funding" role="tabpanel" aria-labelledby="fees-and-funding">
+                <div class="tabs__panel tabs__panel--hidden js-tab-panel" id="tab-panel-fees-and-funding" role="tabpanel" aria-labelledby="fees-and-funding">
                     {% include "patterns/organisms/programme_tabs/fees-and-funding.html" %}
                 </div>
-                <div class="tabs__panel js-tab-panel" id="tab-panel-apply" role="tabpanel" aria-labelledby="apply">
+                <div class="tabs__panel tabs__panel--hidden js-tab-panel" id="tab-panel-apply" role="tabpanel" aria-labelledby="apply">
                     {% include "patterns/organisms/programme_tabs/apply.html" %}
                 </div>
 
