correct z index of the nav overlay

--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -102,11 +102,12 @@ $z-index: (
     under: -10,
     base: 10,
     overlap: 20,
-    nav-overlay: 30,
+    free30: 30,
     headerLogo: 40,
     gridlines: 50,
     above-gridlines: 60,
     header: 70,
+    nav-overlay: 75,
     nav: 80,
     header-gridlines: 90,
     cookie-message: 100,
