reset the menu on header drawer close

--- a/rca/project_styleguide/templates/patterns/base.html
+++ b/rca/project_styleguide/templates/patterns/base.html
@@ -35,7 +35,7 @@
             {% block header %}{% endblock %}
         </header>
 
-        <nav class="app__navigation">
+        <nav class="app__navigation" data-nav-container>
             {% include "patterns/atoms/grid-lines/grid-lines.html" %}
             <section class="header__menus">
                 {% primarynav %}
