remove outline from search input on focus - we have the cursor as an indicator

--- a/rca/static_src/sass/components/_search.scss
+++ b/rca/static_src/sass/components/_search.scss
@@ -12,12 +12,20 @@
         width: 100%;
         border-bottom: 1px solid $color--white;
         padding: ($gutter / 2) ($gutter * 1.5) ($gutter / 2) ($gutter / 2);
+
+        &:focus {
+            outline: 0;
+        }
     }
 
     &__button {
         position: absolute;
         right: 0;
         top: 15px;
+
+        &:focus {
+            outline: 0;
+        }
 
         @include media-query(medium) {
             top: 18px;
