--- a/rca/static_src/sass/components/_nav.scss
+++ b/rca/static_src/sass/components/_nav.scss
@@ -23,10 +23,10 @@
         scrollbar-width: none; // sass-lint:disable-line no-misspelled-properties
         -ms-overflow-style: none; // sass-lint:disable-line no-vendor-prefixes
 
-        &::-webkit-scrollbar { // sass-lint:disable-line no-vendor-prefixes
+        &::-webkit-scrollbar {
+            // sass-lint:disable-line no-vendor-prefixes
             display: none;
         }
-
 
         &:hover,
         &.is-visible {
