Adding Curriculum content

--- a/rca/project_styleguide/templates/patterns/organisms/featured-alumni/featured-alumni.html
+++ b/rca/project_styleguide/templates/patterns/organisms/featured-alumni/featured-alumni.html
@@ -19,6 +19,6 @@
     </div>
 </div>
 
-{% comment %} <div class="section__row grid">
+<div class="section__row grid">
     {% include "patterns/organisms/carousel/carousel.html" %}
-</div> {% endcomment %}
+</div>
