--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/curriculum.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/curriculum.html
@@ -1,3 +1,7 @@
 <section class="section bg bg--dark">
-    Curriculum content here
+    {% include "patterns/organisms/curriculum-intro/curriculum-intro.html" %}
+
+    <div class="section__notch section__notch--top">
+        <div class="section__notch-fill section__notch-fill--third-col"></div>
+    </div>
 </section>
