put tabs under the nav overlay

--- a/rca/static_src/sass/components/_tab-nav.scss
+++ b/rca/static_src/sass/components/_tab-nav.scss
@@ -1,6 +1,6 @@
 .tab-nav {
     &.sticky {
-        @include z-index(nav);
+        @include z-index(header);
         position: sticky;
         top: 0;
         transition: transform $transition;
