--- a/rca/static_src/sass/layout/_header.scss
+++ b/rca/static_src/sass/layout/_header.scss
@@ -24,7 +24,11 @@
 
         // When inside pinned nav
         .headroom--pinned.headroom--not-top .header__menus & {
-            padding-top: ($gutter / 2);
+            padding-top: 8px;
+        }
+
+        .headroom--pinned.headroom--not-top & {
+            align-items: center;
         }
     }
 
@@ -33,6 +37,10 @@
         margin-left: auto;
         cursor: pointer;
         transition: opacity $transition;
+
+        .headroom--pinned.headroom--not-top & {
+            margin-top: 0;
+        }
 
         &:hover,
         &:focus,
@@ -64,7 +72,7 @@
             opacity: 0.4;
 
             @include media-query(medium) {
-                margin-top: ($grid / 4);
+                margin-top: 4px;
             }
         }
 
@@ -296,8 +304,5 @@
             color: $color--white;
         }
 
-        #{$root}__navigation-toggle {
-            align-items: center;
-        }
     }
 }
