--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/curriculum.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/curriculum.html
@@ -1,3 +1,11 @@
 <section class="section bg bg--dark">
     {% include "patterns/organisms/curriculum-intro/curriculum-intro.html" %}
 </section>
+
+<section class="section bg bg--light">
+    {% include "patterns/organisms/accordion-block/accordion-block.html" %}
+
+    <div class="section__notch section__notch--top">
+        <div class="section__notch-fill section__notch-fill--third-col"></div>
+    </div>
+</section>
