--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -31,6 +31,7 @@
 @import 'components/facilities';
 @import 'components/feature-image';
 @import 'components/featured-alumni';
+@import 'components/fees';
 @import 'components/footer-link-item';
 @import 'components/form';
 @import 'components/form-item';
@@ -45,6 +46,7 @@
 @import 'components/logo';
 @import 'components/nav';
 @import 'components/news';
+@import 'components/overview';
 @import 'components/page';
 @import 'components/pathways';
 @import 'components/pathway-item';
