don't close the menu if the search is in focus

--- a/rca/project_styleguide/templates/patterns/molecules/navigation/primarynav.html
+++ b/rca/project_styleguide/templates/patterns/molecules/navigation/primarynav.html
@@ -46,7 +46,7 @@
                 </ul>
             </nav>
 
-            <div class="app__search app__search--desktop">
+            <div class="app__search app__search--desktop" data-search-desktop>
                 {% include 'patterns/molecules/search/search.html' %}
             </div>
         </div>
