--- a/rca/project_styleguide/templates/patterns/organisms/featured-alumni/featured-alumni.html
+++ b/rca/project_styleguide/templates/patterns/organisms/featured-alumni/featured-alumni.html
@@ -5,20 +5,12 @@
     </div>
     <div class="featured-alumni__body">
         <ul class="featured-alumni__list">
-            <li><a href="#">James Dyson</a></li>
-            <li><a href="#">Anton Furst</a></li>
-            <li><a href="#">Golifer Langston Architects</a></li>
-            <li><a href="#">Ben Kelly</a></li>
-            <li><a href="#">Kirsten MacKay</a></li>
-            <li><a href="#">Sheila O’Donnell</a></li>
-            <li><a href="#">Urban Salon</a></li>
-            <li><a href="#">Tonkin Liu</a></li>
-            <li><a href="#">Theis & Khan</a></li>
-            <li><a href="#">FreeState - Adam Scott and Charlotte Boyens</a></li>
+            {% for link in alumni_links %}
+                <li><a href="{{link.value.link}}">{{link.value.name}}</a></li>
+            {% endfor %}
         </ul>
     </div>
 </div>
-
 <div class="section__row grid">
     {% include "patterns/organisms/carousel/carousel.html" %}
 </div>
